--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <title>Culte en direct</title>
 </head>
 <body>
- <iframe src="http://delight-idahosa.org/ngrok.io" frameborder="0" width="100%"></iframe>
+ <iframe src="http://delight-idahosa.org" frameborder="0" width="100%"></iframe>
  
 </body>
 </html>
