--- a/index.html
+++ b/index.html
@@ -1,24 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link href="https://vjs.zencdn.net/7.8.4/video-js.css" rel="stylesheet" />
-</head>
-<body>
-  <video
-    id="my-video"
-    class="video-js"
-    controls
-    preload="auto"
-    width="1280"
-    height="720"
-    data-setup="{}">
-    <source src="stream1.m3u8" type="application/vnd.apple.mpegurl" />
-    <p class="vjs-no-js">
-      To view this video please enable JavaScript, and consider upgrading to a
-      web browser that
-      <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
-    </p>
-  </video>
-  <script src="https://vjs.zencdn.net/7.8.4/video.js"></script>
-</body>
-</html>
+<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://vimeo.com/webinars/events/5f21659c-be48-4ed3-974d-5c9c8d329e94/embed" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;"></iframe></div>
